# rCore

./: .gitignore  .gitmodules  BBBToolchain_Mac.cmake  BBBToolchain_Windows.cmake  CMakeLists.txt  MasterBuilder_Mac.sh  MasterBuilder_Windows.bat  README.md  core.cpp  core.h  easylogging++.h  startup.sh  startup_autorun.service  util.h
etc/: .profile
helpers/: .bashrc  show-pins.pl
overlays/: BB-PWM1A-00A0.dtbo  BB-PWM1A-00A0.dts  BB-PWM1B-00A0.dtbo  BB-PWM1B-00A0.dts  BB-PWM2A-00A0.dtbo  BB-PWM2A-00A0.dts  BB-PWM2B-00A0.dtbo  BB-PWM2B-00A0.dts  bspm_P8_10_17-00A0.dtbo  bspm_P8_11_17-00A0.dtbo  bspm_P8_12_f-00A0.dtbo  bspm_P8_14_f-00A0.dtbo  bspm_P8_15_f-00A0.dtbo  bspm_P8_16_f-00A0.dtbo  bspm_P8_17_f-00A0.dtbo  bspm_P8_18_2f-00A0.dtbo  bspm_P8_20_37-00A0.dtbo  bspm_P8_21_2f-00A0.dtbo  bspm_P8_22_7-00A0.dtbo  bspm_P8_23_17-00A0.dtbo  bspm_P8_24_2f-00A0.dtbo  bspm_P8_25_37-00A0.dtbo  bspm_P8_26_2f-00A0.dtbo  bspm_P8_27_f-00A0.dtbo  bspm_P8_28_f-00A0.dtbo  bspm_P8_29_f-00A0.dtbo  bspm_P8_30_f-00A0.dtbo  bspm_P8_33_17-00A0.dtbo  bspm_P8_34_2f-00A0.dtbo  bspm_P8_35_f-00A0.dtbo  bspm_P8_36_f-00A0.dtbo  bspm_P8_39_17-00A0.dtbo  bspm_P8_3_f-00A0.dtbo  bspm_P8_40_37-00A0.dtbo  bspm_P8_41_17-00A0.dtbo  bspm_P8_41_2f-00A0.dtbo  bspm_P8_42_f-00A0.dtbo  bspm_P8_43_f-00A0.dtbo  bspm_P8_44_f-00A0.dtbo  bspm_P8_45_f-00A0.dtbo  (+19 more)
